// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HabitList /> renders as empty 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "rgb(242, 242, 242)",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "fontSize": 72,
          }
        }
      >
        🤷‍♀️
      </Text>
    </View>
  </View>
</View>
`;

exports[`<HabitList /> renders as loading 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "rgb(242, 242, 242)",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "fontSize": 72,
          }
        }
      >
        🤔
      </Text>
    </View>
  </View>
</View>
`;

exports[`<HabitList /> renders habits 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "rgb(242, 242, 242)",
          },
        ]
      }
    >
      <ScrollView
        data={
          Array [
            Object {
              "__typename": "Habit",
              "id": "1",
              "name": "🦷 Floss Teeth",
            },
          ]
        }
        disableVirtualization={false}
        horizontal={false}
        initialNumToRender={10}
        maxToRenderPerBatch={10}
        numColumns={1}
        onEndReachedThreshold={2}
        removeClippedSubviews={false}
        scrollEventThrottle={50}
        stickyHeaderIndices={Array []}
        updateCellsBatchingPeriod={50}
        viewabilityConfigCallbackPairs={Array []}
        windowSize={21}
      >
        <View
          style={null}
        >
          <TouchableOpacity
            activeOpacity={0.2}
            style={
              Array [
                Object {
                  "justifyContent": "center",
                  "minHeight": 64,
                },
                Object {
                  "backgroundColor": "rgb(255, 255, 255)",
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "marginHorizontal": 20,
                  },
                  Object {
                    "color": "rgb(28, 28, 30)",
                  },
                ]
              }
            >
              🦷 Floss Teeth
            </Text>
          </TouchableOpacity>
        </View>
      </ScrollView>
    </View>
  </View>
</View>
`;

exports[`<HabitList /> renders on error 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "rgb(242, 242, 242)",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "fontSize": 72,
          }
        }
      >
        💩
      </Text>
    </View>
  </View>
</View>
`;
